--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
    "author": "",
    "license": "MIT",
    "devDependencies": {
-      "@types/jquery": "^3.3.4",
+      "@types/react": "^16.4.6",
+      "@types/react-dom": "^16.0.6",
       "ts-loader": "^4.4.2",
       "typescript": "^2.9.2",
       "webpack": "^4.15.1",
       "webpack-cli": "^3.0.8"
    },
    "dependencies": {
-      "jquery": "^3.3.1"
+      "react": "^16.4.1",
+      "react-dom": "^16.4.1"
    },
    "description": ""
 }
